# StackManagerQt

./: CMakeLists.txt  README.md  content-sets.html
cmake/modules/: FindEFSW.cmake  FindQuaZip.cmake
content-sets/: content-sets.html  content-sets.json
src/: AppDelegate.cpp  AppDelegate.h  AssignmentClientProcess.cpp  AssignmentClientProcess.h  BackgroundProcess.cpp  BackgroundProcess.h  DownloadManager.cpp  DownloadManager.h  Downloader.cpp  Downloader.h  FileWatcherListener.cpp  FileWatcherListener.h  GlobalData.cpp  GlobalData.h  LogViewer.cpp  LogViewer.h  StackManagerVersion.h.in  main.cpp  resources.qrc
src/ui/: AssignmentWidget.cpp  AssignmentWidget.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  SvgButton.cpp  SvgButton.h
ui/: AppDelegate.ui  DownloadManager.ui  LogViewer.ui
